--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 dataset_builder: &ds_builder
-    table_path: 'example/table.txt'
+    table_path: 'config/table.txt'
     # If change image height(32), change the net.
     # If image width is not null, the image will be distorted.
     img_shape: [32, null, 3]
@@ -12,10 +12,10 @@ train:
     dataset_builder:
         <<: *ds_builder
     train_ann_paths:
-        - '/datasets/MJSynth/mnt/ramdisk/max/90kDICT32px/annotation_train.txt'
-        - '/datasets/MJSynth/mnt/ramdisk/max/90kDICT32px/annotation_val.txt'
+        - 'mnt/ramdisk/max/90kDICT32px/annotation_train.txt'
+        - 'mnt/ramdisk/max/90kDICT32px/annotation_val.txt'
     val_ann_paths:
-        - '/datasets/MJSynth/mnt/ramdisk/max/90kDICT32px/annotation_test.txt'
+        - 'mnt/ramdisk/max/90kDICT32px/annotation_test.txt'
     batch_size_per_replica: 512
     # The model for restore, even if the number of characters is different
     restore: ''
